# house-of-wisdom-mcp

./: .env.example  .gitignore  LICENSE  README.md  config.example.yaml  pyproject.toml
.github/workflows/: publish.yml  test.yml
ai_council/: __init__.py  config.py  logger.py  main.py  models.py  synthesis.py  tools.py
ai_council/tests/: test_call_overrides.py  test_client_and_concurrency.py  test_config.py  test_discoverability.py  test_logger.py  test_mode_resolution.py  test_model_selection.py  test_models_contract.py  test_prompt_assembly.py  test_retry.py  test_telemetry.py  test_tool_loop.py  test_tool_names.py  test_tools.py
ai_council/tests/fixtures/sample_repo/: README.md
ai_council/tests/fixtures/sample_repo/src/: math.py
docs/archive/: README.md
docs/archive/2026-07-21/: audit-bugs.md  bug-audit-findings.md  bugs-and-issues.md
docs/plans/: README.md  enhancements.md
